--- a/src/index.css
+++ b/src/index.css
@@ -9,21 +9,31 @@
 @keyframes addToCart {
   0% {
     transform: scale(1) translate(0, 0);
+    opacity: 1;
   }
   15% {
     transform: scale(0.95) translate(90px, -160px);
+    opacity: 1;
   }
   30% {
     transform: scale(0.9) translate(180px, -200px);
+    opacity: 1;
   }
   45% {
     transform: scale(0.85) translate(270px, -200px);
+    opacity: 1;
   }
   60% {
     transform: scale(0.8) translate(360px, -180px);
+    opacity: 1;
   }
   75% {
     transform: scale(0.7) translate(480px, -120px);
+    opacity: 1;
+  }
+  95% {
+    transform: scale(0.6) translate(600px, 0);
+    opacity: 1;
   }
   100% {
     transform: scale(0.6) translate(600px, 0);
@@ -32,5 +42,5 @@
 }
 
 .animate-add-to-cart {
-  animation: addToCart 3.8s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+  animation: addToCart 0.8s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
 }
